# SESAMME

./: .readthedocs.yaml  README.md  README.rst  SESAMME Debug_v0.5.ipynb  SESAMME_Demo.ipynb  afe00_Q_Table.txt  setup.cfg
docs/: api.rst  conf.py  extinction_curves.rst  file_formats.rst  index.rst  install.rst  requirements.txt
docs/example_data/: M83-8_preprocess.txt  M83-8_sb99_preprocess.txt
docs/notebooks/: Cube_Maker_Demo.ipynb  Run_SESAMME_Demo.ipynb
sesamme/: __init__.py  mcmc.py  models.py  sesamme.py  vis.py
