[metadata]
name = sesamme
version = 0.9 
author = Logan Jones
author_email = lojones@stsci.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
description = Simultaneous estimates of star-cluster age, metallicity, mass, and extinction
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = MCMC, spectral fitting, spectroscopy, stellar populations, star clusters, UV, optical
classifiers = 
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy
 

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    emcee>=3.0.0
    extinction>=0.4.5
    dust_extinction>=1.2
    corner>=2.2.1
    astropy>=4.3.1
    scipy>=1.7.3
    matplotlib>=3.4.2
    h5py>=3.7.0
    specutils>=1.3.0
    jupyter>=1.0.0
    jupyterlab>=3.6.0
    notebook>=6.5.0
    tqdm>=4.61.0


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-piccolo

[options.package_data]
sesamme = data/*

[tool:pytest]
testpaths = "sesamme" "docs"
doctest_plus = enabled
text_file_format = rst
# addopts = --doctest-rst


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
